fixed issue with modal jumping to top of page when exited with href=#

--- a/css/style.css
+++ b/css/style.css
@@ -371,3 +371,8 @@ p#copyright {
 /*video {
     object-fit: cover;
 }*/
+
+/*.modal-open {
+    overflow: visible;
+}
+*/
